--- a/src/styles/features/_contact.scss
+++ b/src/styles/features/_contact.scss
@@ -1,4 +1,4 @@
-@use "./vars" as v;
+@use "../cofigs/vars" as v;
 
 /* ============================================
    Contact Modal Component (BEM)
