--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -31,6 +31,8 @@
     // background-clip: text;
     // color: transparent;
     text-decoration: none;
+    font-family: rajdhani;
+    font-weight: 700;
   }
   &__menu {
     display: none;
