--- a/src/styles/ui/_logo.scss
+++ b/src/styles/ui/_logo.scss
@@ -1,11 +1,11 @@
 @use "../cofigs/vars" as v;
 
 .typo-logo {
-  font-family: 'suit';
+  font-family: 'rajdhani';
   display: flex;
-  letter-spacing: -1.5px;
-  font-weight: 900;
-  font-size: 1.5rem;
+  font-weight: 700;
+  letter-spacing: -1px;
+  font-size: 1.75rem;
 
   .white {
     color: white;
