--- a/src/styles/features/index.scss
+++ b/src/styles/features/index.scss
@@ -4,4 +4,5 @@
 @import './serviceB2bTwo';
 @import './serviceCenter';
 @import './serviceProcess';
+@import './serviceProblem';
 // @import './serviceB2bThree'
